syntax = "proto3";

package hello;
option go_package="hello/hellopb";

message Hello {
  string first_name = 1;
  string last_name = 2;
}

message HelloRequest {
  Hello hello = 1;
}

message HelloResponse {
  string result = 1;
}

message HelloWithDeadlineRequest {
  Hello hello = 1;
}

message HelloWithDeadlineResponse {
  string result = 1;
}

service HelloService{
  // Unary
  rpc Hello(HelloRequest) returns (HelloResponse) {};
  rpc HelloWithDeadline(HelloWithDeadlineRequest) returns (HelloWithDeadlineResponse) {};
}